# compute-course-public

./: .gitignore  myfirst.f90  mynotebook.ipynb  packages.txt
assignments/: fortran.md  python-f2py.md  python-general-numpy.md  python-pyvtk.md
data/: MOS6581.raw  array_file.npz  array_file_compressed.npz  data_handling.ipynb  test.npy  text_array.txt
dataviz/: 04cars.txt  04cars.xls  PyVTK.ipynb  colorado_elev.vit  elevation.pvsm  elevation.vtk  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  example1.vtk  example1b.vtk  example3.vtk  example3b.vtk  example4.py  exv1.py  exv2.py  exv3.py  exv4.py  perlin.py  perlin2d.py  perlin3d.py  pyvtk_ex1.py  pyvtk_ex2.py  pyvtk_ex3.py  streamlines.pvsm
f2py/: Fortran and F2PY.ipynb  arr1.py  arr2.py  filters.f90  fortran_utils.py  image_processing.py  mf_mixed.py  simple.py  test.py
fortran/: CMakeLists.txt
matplotlib/: Matplotlib.ipynb  ex1.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex2.py  ex23.py  ex3.py  ex5.py  ex6.py  ex9.py  test.eps
notebooks/: Introduction_to_Python.ipynb
oop/: b2d_oop.py  graphics_example.py  graphics_example_empty.py  graphics_example_simple.py  graphics_example_start.py  graphics_example_template.py  mymodule.py  oop10.py  oop11_py5.py  (+15 more)
project/skeleton_code/: CMakeLists.txt  README  build_python_module  configure_build  main.f90  particle_data.f90  particle_defs.f90  particle_driver.f90  particle_player.py  particle_player.ui  particle_player_qt.py  particle_sim.f90  particle_state.f90  particle_utils.f90  particles.py  run.sh  run_python.sh  vector_operations.f90
(+270 files in other folders)
